1. Add entity for leaves and work . 2. Added model mapper bean.